[gd_scene load_steps=10 format=3 uid="uid://chyig63qfsrfr"]

[ext_resource type="Texture2D" uid="uid://bdrc5f223eo42" path="res://asset/UI/photo album/background bar.png" id="1_u31wo"]
[ext_resource type="Script" path="res://ui/PhotoAlbum/background_bar.gd" id="2_28vd6"]
[ext_resource type="Texture2D" uid="uid://dj1u5u1w40r5o" path="res://asset/UI/photo album/bg/icon/highway.png" id="2_stdvr"]
[ext_resource type="Theme" uid="uid://bc3ohqpp1sfg3" path="res://asset/art/transparency_theme.tres" id="3_sltaw"]
[ext_resource type="Shader" path="res://ui/PhotoAlbum/background_icon_fade.gdshader" id="4_umdbi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r0mf6"]
shader = ExtResource("4_umdbi")
shader_parameter/fade_distance = 0.2

[sub_resource type="ViewportTexture" id="ViewportTexture_hinsu"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_tuk1m"]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(964, 1200), Vector2(964, 891)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crr12"]
_data = {
"open": SubResource("Animation_tuk1m")
}

[node name="BackgroundBar" type="Node2D"]
position = Vector2(964, 891)
script = ExtResource("2_28vd6")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1150, 250)

[node name="Scroll" type="ScrollContainer" parent="SubViewport"]
offset_right = 1150.0
offset_bottom = 230.0
scroll_horizontal = 100
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
scroll_deadzone = 20

[node name="Buttons" type="HBoxContainer" parent="SubViewport/Scroll"]
custom_minimum_size = Vector2(1150, 250)
layout_mode = 2
alignment = 1

[node name="LeftBlank" type="ColorRect" parent="SubViewport/Scroll/Buttons"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="TextureButton" type="TextureButton" parent="SubViewport/Scroll/Buttons" groups=["album_bg"]]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("2_stdvr")

[node name="TextureButton2" type="TextureButton" parent="SubViewport/Scroll/Buttons" groups=["album_bg"]]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("2_stdvr")

[node name="ColorRect" type="ColorRect" parent="SubViewport/Scroll/Buttons/TextureButton2" groups=["album_bg"]]
show_behind_parent = true
layout_mode = 0
offset_right = 215.0
offset_bottom = 215.0

[node name="TextureButton3" type="TextureButton" parent="SubViewport/Scroll/Buttons" groups=["album_bg"]]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("2_stdvr")

[node name="TextureButton4" type="TextureButton" parent="SubViewport/Scroll/Buttons" groups=["album_bg"]]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("2_stdvr")

[node name="TextureButton5" type="TextureButton" parent="SubViewport/Scroll/Buttons" groups=["album_bg"]]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("2_stdvr")

[node name="RightBlank" type="ColorRect" parent="SubViewport/Scroll/Buttons"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="AlbumBgButtonExample" type="TextureButton" parent="SubViewport" groups=["album_bg"]]
visible = false
mouse_filter = 1
texture_normal = ExtResource("2_stdvr")

[node name="CloseButton" type="Button" parent="."]
offset_left = -927.0
offset_top = -837.0
offset_right = 922.0
offset_bottom = 189.0
theme = ExtResource("3_sltaw")

[node name="Bar" type="Sprite2D" parent="."]
texture = ExtResource("1_u31wo")

[node name="ViewSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_r0mf6")
position = Vector2(0, 30)
texture = SubResource("ViewportTexture_hinsu")

[node name="Drag" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -652.0
offset_top = -110.0
offset_right = 670.0
offset_bottom = 128.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_crr12")
}

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="gui_input" from="Drag" to="." method="_on_drag_gui_input"]
